basic game without winning or losing

--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
   						<p>click any key to begin!</p>
   					</div>
   					<div id="gameplay-div">
-  						<h3>test</h3>
+  						<h3>guess the name</h3>
   					</div>
+            <div>
+              <h3 id="first"></h3>
+              <h3 id="last"></h3>
+              <div class="used-div col-xs-12">
+                <h4>Used Letters</h4>
+                <p id="used"></p>
+              </div>
+            </div>
   				</section>
   			</div>
   		</div>
