--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <h4 id="guess-text" class="guess-text">you have <span id="guess-span">0</span> guesses left</h4>
     					</div><!-- end row -->
               
-              <div class="row img-row">
-                <div id="game-img-div" class="col-sm-10 col-sm-offset-1">
-                  <img src="./assets/images/joffrey.jpg" class= "img-responsive game-image">
+              <div class="row img-row" id="game-img-div">
+                <div  class="col-sm-10 col-sm-offset-1" id="img-wrapper">
+                  <img src="./assets/images/godswood.jpg" class= "img-responsive game-image">
                 </div>
               </div><!-- end img row -->
 
